tests/security/taintThroughDictMap/output.txt
ERROR: TaintedData - input.hack:16:14 - Data from a URL query string found its way to an HTML tag using path